--- a/css/sateesh.css
+++ b/css/sateesh.css
@@ -2,3 +2,38 @@
 	
 	
 }
+
+
+                  /*profile tab styling*/
+				  
+* {box-sizing: border-box}
+
+
+/* Style the tab */
+.tab {
+    float: left;
+    height: 300px;
+}
+
+/* Style the buttons inside the tab */
+.tab button {
+    display: block;
+    background-color: inherit;
+    border: none;
+    outline: none;
+    text-align: left;
+    cursor: pointer;
+    transition: 0.3s;
+    
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+    background-color: #ddd;
+}
+
+/* Create an active/current "tab button" class */
+.tab button.active {
+    background-color: #ccc;
+}
+				  
