--- a/css/sumaiya.css
+++ b/css/sumaiya.css
@@ -1,10 +1,5 @@
-
-	.primary-navbar .navbar-btn.btn-sm {
-    padding: 7px 18px 6px;
-    font-size: 13.5px;
-    line-height: 13px;
-    border-radius: 2px;
-    margin-top: 19.5px;
-    margin-bottom: 17.5px;
-    letter-spacing: .1px;
+.anchor ul li a
+{
+text-decoration: none !important;
 }
+
