--- a/css/sateesh.css
+++ b/css/sateesh.css
@@ -41,6 +41,13 @@
     background-color: #ccc;
 }
 
+                                            /*box shadow*/
+											
+.shadow{
+	
+    
+    box-shadow: 5px 5px grey;										
+}
 
 																	/*cover*/
 .stse-cover{height: 400px;
