--- a/css/sateesh.css
+++ b/css/sateesh.css
@@ -73,4 +73,25 @@
 			  transform: translate(-50%, -50%);
 }				  
 
- 
+/* login new*/
+.overlay {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0, 0.4);
+    overflow-x: hidden;
+    transition: 0.5s;
+}
+
+
+
+.overlay .closebtn {
+    position: absolute;
+    
+    right: 45px;
+    font-size: 60px;
+}
